--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@element-plus/nuxt": "^1.0.10",
     "@nuxt/devtools": "^1.6.0",
     "@prisma/nuxt": "^0.0.35",
+    "@types/jsonwebtoken": "^9.0.7",
     "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
     "element-plus": "^2.8.5",
+    "jsonwebtoken": "^9.0.2",
     "nuxt": "^3.13.0",
     "vue": "latest",
     "vue-router": "latest"
@@ -23,6 +26,7 @@
   "devDependencies": {
     "@nuxtjs/eslint-module": "^4.1.0",
     "@prisma/client": "^5.20.0",
+    "@types/bcrypt": "^5.0.2",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
